tests/invalid/trait/equality_constraint_syntax_deferred.facet
trait Provider {
  type Item;
}

fn main<T>(x: unrestricted T) -> unrestricted T where T::Item = unrestricted isize {
  x
}
